# sk_extract

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  dev.kdl  flake.nix  justfile  rar-license.txt  rust-toolchain  rust-toolchain.toml
.github/workflows/: flakehub-publish-tagged.yml
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/sk_extract/: all.html  index.html  sidebar-items.js
doc/sk_extract/extractors/: fn.extract_7z.html  fn.extract_bz2.html  fn.extract_gz.html  fn.extract_lzma.html  fn.extract_rar.html  fn.extract_tar.html  fn.extract_tbz2.html  fn.extract_tgz.html  fn.extract_txz.html  fn.extract_zip.html  index.html  sidebar-items.js
doc/src/sk_extract/: extractors.rs.html  lib.rs.html
docs/: book.toml
docs/src/: SUMMARY.md
nix/: default.nix  devshell.nix
src/: extensions.rs  extractors.rs  main.rs
src/lib/: extractors.rs  lib.rs
src/test_data/: checksum_02  checksum_03  test.7z  test.bz2  test.lzma  test.rar  test.tar  test.tbz2  test.tgz  test.txz  test.xz  test_csum.bz2  test_csum.lzma  test_csum.xz  testfile_02  testfile_03
test_dir/: test  test_csum
