[package]
name = "sk_extract"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9.0"
bzip2 = "0.4.4"
data-encoding = "2.4.0"
flate2 = "1.0.27"
rayon = "1.7.0"
ring = "0.17.12"
rust-lzma = "0.6.0"
serial_test = "2.0.0"
sevenz-rust = "0.5.2"
tar = "0.4.40"
unrar = "0.5.1"
zip = "0.6.6"


[[bin]]
name = "sk_extract"
path = "src/main.rs"

[lib]
name = "sk_extract"
path = "src/lib/lib.rs"
